# ShazamAPI

./: .flakeheaven-baseline  .flakeheaven.toml  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
ShazamAPI/: __init__.py  algorithm.py  api.py  signature_format.py
