[tool.poetry]
name = "ShazamAPI"
version = "0.0.2"
description = "Fully reverse engeenired Shazam API"
authors = [
    "Numenorean <41187266@users.noreply.github.com>",
    "Alexander Pushkov <alexander@notpushk.in>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydub = "^0.25.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pydub-stubs = "^0.25.1"
mypy = "^0.942"
wemake-python-styleguide = "^0.16.1"
add-trailing-comma = "^2.2.2"
isort = "^5.10.1"
rope = "^0.23.0"
autopep8 = "^1.6.0"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
